# cf-speedtest-custom

./: .gitignore  LICENSE  README.md  example_test.py  pyproject.toml
.github/workflows/: mirror.yml
cf_speedtest/: __init__.py  options.py  speedtest.py  utils.py
python/: example_test.py  pyproject.toml
python/cf_speedtest/: __init__.py  speedtest.py
python/cf_speedtest_custom/: __init__.py  speedtest.py
src/: assets.js
website/: bundle-assets.js  package-lock.json  package.json  wrangler.example.toml
website/public/: index.html  results.html  speedtest-cf.js
website/src/: assets.js  index.js
